fixed bug with nav getting behind images

--- a/styles/main_stylesheet.css
+++ b/styles/main_stylesheet.css
@@ -21,6 +21,7 @@ p {
 nav {
   position: -webkit-sticky;
   position: sticky;
+  z-index: 99999;
   top: 10px;
 }
 
